<resources>
    <string name="app_name">1971</string>
    <string name="file_provider_authority">io.left.core.videon.fileprovider</string>
    <string name="file_name_profile_image" translatable="false">profile_image</string>
    <string name="error_picking_image" translatable="false">Could not pick image</string>
    <string name="error_cropping_image" translatable="false">Could not crop image</string>
    <string name="error_storage_permission_is_denied" translatable="false">Storage permission is needed</string>
    <string name="user_inserted_confirmation" translatable="false">User %s inserted</string>
    <string name="user_inserted_empty_message" translatable="false">Please enter your info</string>
    <string name="remote_user_call_with_null_api" translatable="false">Please enter your info</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="add_user">Add user</string>
    <string name="framework">FRAMEWORK</string>
    <string name="show_data">Show data from DB</string>
    <string name="save_data">Save Data in DB</string>
    <string name="add_item">Add Item</string>
    <string name="delete_confirmation">Do you want to delete?</string>
    <string name="api_token_value" translatable="false">www</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, Vivamus sodales in ligula at sodales.Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded" translatable="false">Downloaded</string>
    <string name="more" translatable="false">More</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="fb_login_protocol_scheme">fb1045491952320880</string>
    <string name="error_facebook_account_id_is_null" translatable="false">"Facebook Null"</string>
    <string name="share_message">Hi, I am watching this video on Videon App.Download the app from playstore:  </string>
    <string name="facebook_login_text">Login With Facebook</string>
    <string name="google_login_text">Login With Google</string>
    <string name="text_or">OR</string>
    <string name="text_email">email</string>
    <string name="text_password">password</string>
    <string name="text_sign_in">Sign In</string>
    <string name="sign_up_message">Sign Up</string>
    <string name="promt_login_message">Not Login?</string>
    <string name="text_login">Sign In</string>
    <string name="text_username">username</string>
    <string name="text_confirm_password">confirm password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="already_account_message">Already have an Account?</string>
    <string name="text_forgot_password_message">Forgot Your Password?</string>
    <string name="facebook_app_id">1045491952320880</string>
    <string name="text_home_title">Welcome To 1971</string>
    <string name="text_home_search">&#160;Search</string>
    <string name="home_live_tv">Live TV</string>
    <string name="home_featured">Popular Videos</string>
    <string name="text_home_most_popular">Recent Upload</string>
    <string name="text_game_thrones">Game thrones</string>
    <string name="text_tv_series">TV Series</string>
    <string name="home_text_most_recent">Recent Upload</string>
    <string name="Setting_text">Settings</string>
    <string name="setting_push_notification">Push Notification</string>
    <string name="setting_text_about_us">About us</string>
    <string name="setting_text_contact_us">Contact us</string>
    <string name="setting_privacy_policy"><![CDATA[Privacy & policy]]></string>
    <string name="setting_sign_out">Sign Out</string>
    <string name="setting_sign_in">sign in</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="edit_profile_full_name">Full Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_change_password">Change password</string>
    <string name="edit_profile_confirm_password">Confirm Password</string>
    <string name="video_details_video_title">Video Title</string>
    <string name="details_rating_4_6" translatable="false">4.6</string>
    <string name="text_suggested_videos">Suggested videos</string>
    <string name="video_details_text_rate_this">Rate This</string>
    <string name="sample_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="sample_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstital_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_playlist">Playlist</string>
    <string name="login">Sign In</string>
    <string name="log_out">Sign Out</string>
    <string name="sign_out_warning">Are you sure to Sign Out?</string>
    <string name="sign_out_success">Sign Out success</string>
    <string name="sign_out_failed">Sign Out failed!</string>
    <string name="menu_settings">Settings</string>
    <string name="my_profile_user_name">User Name</string>
    <string name="my_profile_email">UserEmail@w3engineers.com</string>
    <string name="search_video_title">Video title</string>
    <string name="search_videon_movies">videon movies</string>
    <string name="search_drama" translatable="false">Drama</string>
    <string name="search_duration_1h_30m" translatable="false">1h 30m</string>
    <string name="search_text_1_hour_ago" translatable="false">1 hour ago</string>
    <string name="text_we_will_send_message" translatable="false">Please enter your email address and we\'ll send you an email to reset your password</string>
    <string name="forgot_pass_email_address">Email Address</string>
    <string name="forgot_pass_reset_password">Reset Password</string>
    <string name="text_old_password">Old password</string>
    <string name="text_dummy_about_us"><![CDATA[<h1>About Videon</h1> \t\t<h4>A forever-free version of videon that’s YOURS, and yours for life. Preview and play all you want - there’s lots of videos ( Movie , Drama, Song and funny video) to discover.</h4> \t\t<h4>Let\'s Play!</h4> \t\t<ul> \t\t\t<li>Watch on any android mobile device</li> \t\t\t<li>You can even Download & Watch Offline for lifetime</li> \t\t\t<li>You can set the PLAYLIST and FAVOURITE list</li> \t\t\t<li>FRESH ON THE FEED: Get first dibs on bite-sized videos, offers & more!</li> \t\t\t<li>Everything from LIVE news and music, to lifestyle and events. Stream your favourite channels now on videon LIVE.</li> \t\t\t<li>Dedicated kids section</li> \t\t</ul>]]></string>
    <string name="text_please_login">Please Login to get access your profile</string>
    <string name="title_featured_video">Featured Videos</string>
    <string name="title_most_popular">Most Popular Videos</string>
    <string name="title_most_recent">Most Recent Videos</string>
    <string name="text_no_data_found">No Data Found</string>
    <string name="text_write_a_review">Write a review</string>
    <string name="error_code_validation">Something went wrong!</string>
    <string name="text_resend_code">Resend Code</string>
    <string name="text_password_reset_msg">Pasword reset successfull!</string>
    <string name="text_password_password_recovery_msg">Password Recovery</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="text_agreement" translatable="false">Your agree to Videon\'s Privacy Policy</string>
    <string name="authentication_fail_message_by_api">authorization not successful</string>
    <string name="text_no_data_found_server" translatable="false">Didn\'t find any  data on server</string>
    <string name="rate_this_video_dialog">You have rated this video</string>
    <string name="email_send_message">We send a 4 digit code to your email address</string>
    <string name="enter_code_hint" translatable="false">Enter Code</string>
    <string name="proceed">Proceed</string>
    <string name="welcome_text" translatable="false">Congratulations!\nYour account has been activated.</string>
    <string name="welcome_text_reset_password" translatable="false">Congratulations!\nYour account has been reset.</string>
    <string name="text_password_verification_msg" translatable="false">Email Verification</string>
    <string name="sample_video_duration">02:45</string>
    <string name="video_download_title" translatable="false">Video url name goes here.mp4</string>
    <string name="language_change_notification">Language Chagnged!</string>
    <string-array name="lang_array">
        <item >ENGLISH</item>
        <item >CHINESE</item>
    </string-array>
    <string name="select_videon">Select Video</string>
    <string name="video_item_title">720p</string>
    <string name="video_size_text">23mb</string>
    <string name="enter_link">Enter your link to download</string>
    <string name="download_dialog">Save</string>
    <string name="channel_list_data_not_found" translatable="false">Data not found</string>
    <string name="item_channel_movies" translatable="false">Movies</string>
    <string name="activity_create_new_password" translatable="false">Create New Password</string>
    <string name="base_button_submit_create_password" translatable="false">Submit</string>
    <string name="edit_profile_button_update" translatable="false">Update</string>
    <string name="base_button_login_empty_activity" translatable="false">Login</string>
    <string name="button_see_all_home" translatable="false">See All</string>
    <string name="button_see_all_featured" translatable="false">See All</string>
    <string name="see_all_most_popular_new" translatable="false">See All</string>
    <string name="see_all_most_recent" translatable="false">See All</string>
    <string name="text_movies_item_live_tv" translatable="false">Movies</string>
    <string name="login_sign_in_toolbar" translatable="false">Sign In</string>
    <string name="privacy_policy_toolbar" translatable="false">Privacy policy</string>
    <string name="toolbar_search_movies" translatable="false">Search Result</string>
    <string name="item_search_4k_views" translatable="false">4k Views</string>
    <string name="activity_data_not_found_see_all_new" translatable="false">Data not found</string>
    <string name="item_4k_views_default_value" translatable="false">4k Views</string>
    <string name="activity_sign_up_toolbar" translatable="false">Sign Up</string>
    <string name="data_copy_message" translatable="false">Keyhash copied</string>
    <string name="no_items" >Nothing to display</string>
    <string name="input_dialog_title" >Warning!</string>
    <string name="input_dialog_message" >Please enter the file name</string>
    <string name="videoplayback" >VideoPlayBack</string>
    <string name="live_text" >LIVE</string>
    <string name="password_can_not_empty">Password can\'t be empty</string>
    <string name="space_not_allowed">Space not allowed</string>
    <string name="input_dialog_box_download_write_filename_to_save">write filename to save</string>
    <string name="input_dialog_download_save">Save</string>
    <string name="input_download_cancel">Cancel</string>
    <string name="home_menu_title">home</string>
</resources>