<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_more"
        android:orderInCategory="100"
        android:title="@string/home_menu_title"
        android:visible="false"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/action_profile"
                android:icon="@drawable/ic_user_grey_menu"
                app:showAsAction="always|withText"
                android:title="@string/menu_profile"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                app:showAsAction="always|withText"
                android:title="@string/Setting_text"/>
            <item
                android:id="@+id/action_playlist"
                android:icon="@drawable/ic_history_grey"
                app:showAsAction="always|withText"
                android:title="@string/menu_playlist"/>
            <item
                android:id="@+id/action_login"
                android:icon="@drawable/ic_logout_grey"
                app:showAsAction="always|withText"
                android:title="@string/login"/>

        </menu>
    </item>

</menu>